--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,296 +1,511 @@
+body, html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  color: #777777;
+  background: #4aaaa5;
+  background-image: url("../../../Responsive-Portfolio/assets/images/another.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    line-height: 2;
-    color:black;
-    background: #4aaaa5;
-    background-image: url("../images/dark-paths.png"); 
-  }
+  margin: 8px;
+}
+  
+* {
+  box-sizing: border-box;
+  border-radius: 5px;
+}
 
-  * {
-    box-sizing: border-box;
-    border-radius: 5px;
-  }
-
-  .container {
-    width: 100%;
-    margin: 0 auto;
-    clear: both;        
-  }
+.container {
+  width: 100%;
+  clear: both;        
+}
     
-   #main-container {
-    padding-top: 80px;
-  } 
+#main-container {
+  padding-top: 80px;
+  height: 100%;
+  margin-bottom: 60px;
+} 
   
-
-  .main-section {
-    text-align: left;
-    overflow: auto;
-    padding: 20px;
-    background-color: #666699;
-    border-color: #dddddd;
-    border: 1px solid;
-    margin-top: 40px;
-    margin-bottom: 90px;
-    width: 100%;
-    max-width: 960px;   
-    margin-left: auto;
-    margin-right: auto; 
-    position: relative;
-    
-   
-  }
+.main-section {
+  text-align: left;
+  overflow: auto;
+  padding: 20px;
+  background-color: #043634;
+  border-color: #dddddd;
+  border: 1px solid;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  width: 100%;
+  max-width: 960px; 
+  margin-left: auto;
+  margin-right: auto; 
+  opacity: 0.9;
+}
   
-  header {
-    position:fixed;
-    width: 100%;
-    margin: -10px 0 30px;
-    overflow:auto;
-    background: #ffffff;
-    border-color: #cccccc;
-    border-bottom:  2px  solid;
-    z-index: 99;
-    /* clear: both;  */
-  }
+header {
+  position:fixed;
+  width: 100%;
+  margin: -10px -10px 40px;
+  background-color: #043634;
+  border-color: #cccccc;
+  border-bottom:  2px  solid;
+  z-index: 99;
+  opacity: 0.9;
+}
 
-  #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 90px;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: #4aaaa5;
-    margin-left: 20px;
-  }
+#logo {
+  float: left;
+  width: 250px;
+  height: 90px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 90px;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  background: #4aaaa5;
+  margin-left: 10px;
+}
 
-  nav {
-    float: right;
-    margin-top: 10px;
-    font-size: 24px;
-    height: 80px;
-  }  
+nav {
+  float: right;
+  padding-top: 30px;
+  font-size: 24px;
+  height: 80px;
+}  
 
-  nav a {
-    text-decoration: none;
-    color: #777777;
-  }
+nav a:hover:not(.active) {
+  background-color: #4aaaa5;
+}
 
-  nav a:hover:not(.active) {
-    background-color: #4aaaa5;
-  }
+.navbar a {
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline;
+  padding: 0px 15px;      
+}
 
-  .links {
-    display: inline-block;
-    border-right: 1px  solid #bbb;
-    padding: 0px 15px;      
-    border-radius: 0px;    
-    margin-top: 15px; 
-  } 
+.dropbtn {
+  color: white;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  border-right: 1px  solid #bbb;
+  border-radius: 0px;   
+  outline: none;
+  background-color: inherit;
+  font-family: inherit; 
+  margin: 0; 
+}
 
-  #links-last-child {
-    display: inline-block;
-    padding: 0px 15px;         
-    border-right: 0 none;
-  }
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 100%;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 10px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h1,
+h2,
+h3 {
   
-   h2
-  {
-    font-size: 20px;
-    color: black;
-  }
+  font-weight: 700;
+  color: #4aaaa5;
+}
 
-  h1 {
-    font-family: Georgia, Times, "Times New Roman", serif;
-   font-weight: 700;
-   color: #4aaaa5;
-    font-size: 24px;
-    margin: -20px;
-    background-color: white;
-    width: 100%;
-    max-width: 960px; 
-    height: 125px;
-    line-height: 150px;
-    position: absolute;
-    /* z-index: 99; */
-    text-indent: 20px;
-    /* right: 2%; */
-    top: 0%;
+h1 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 24px;
+  margin: 20px 0;
+} 
+  
+h2 {
+  border-radius: 0px;
+  font-weight: 500;
+  font-size: 22px;
+  border: 1px solid #8383c1;
+  /* height: 50px; */
+  /* width: 95%; */
+  font-family: Verdana, Arial;
+  color: white;
+ 
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  background-color: #669;
+}
 
-  }   
+#workKey{
+  
+  color: black;
+  border-radius: 0px;
+  font-weight: 500;
+  line-height: 1.1;
+  padding: 20px;
+  text-align: center;
+}
+
+a {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 16px;
+  color: #4aaaa5;
+  text-align: center;
+  text-decoration: none;
+  display: inline;    
+}
       
-   div {
-       margin: auto;
-       width: 960px;
-   }   
+div {
+  margin: auto;
+}   
       
-  hr {
-    border: 1px solid #777777;
-    border-radius: 10px;
-    background-color: white;
-    top: 70px;
-    position: absolute;
-    max-width: 960px; 
-    width: 95%;
-    height: 2px;
-    
-    
+hr {
+  border: 1px solid #777777;
+  border-radius: 10px;
+}
 
-  }
 
-  #game {
-    background-color: #DDDDEE;
-    margin-top: 105px;
-    padding: 20px;
-    width: 95%;
-    max-width: 960px; 
-    top: 125px;
-   
+#score {
+  border: 1px solid #8383c1;
+  height: 60px;
+  margin-bottom: 20px;
+  border-radius: 0px;
+   max-width: 960px; 
+   font-family: Verdana, Arial;
+   color: white;
+   padding-top: 20px;
+   padding-bottom: 20px;
+   background-color: #99c;
+   font-size: 15px;
+}
+
+#score .column-1 {
+  height: 20px;
+  width: 33.3%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 0
+}
+
+#score .column-2 {
+  height: 20px;
+  float: left;
+  width: 33.3%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 10px;
+}
+
+#score .column-2 h2 {
+  padding-left: 0%;
+}
+
+#score .column-3 {
+  height: 20px;
+  float: left;
+  width: 33.3%;
+  margin: auto;
+  text-align: center;
+  padding: 0 10px 0 10px;
+}
+
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(102,102,153); 
+  background-color: rgba(102,102,153,0.5); 
+}
+
+.modal-content {
+  background-color:#DDDDEE;
+  
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%;
+  text-align: center;
+}
+.modal-content h3 {
+  color: black;
+  padding-bottom: 10px;
+  font-family: Verdana, Arial;
+  font-weight: 500;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
+
+  
+
     
+#az {
+  border: 0 none;
+  opacity: 0.8;
+  width: 40px;
+  height: 40px;
+ }
+  
+button {
+  color: #fff;
+    background-color: #77c;
+    border-color: #6464c5;
+ 
+ 
+  padding: 5px;
+  margin: 5px; 
+}
 
-  }
+
 
 footer {
-      background-color: #666666;
-      position: fixed;
-      width: 100%;
-      border-top: 8px solid #4aaaa5;
-      left: 0;
-      bottom: 0;
-      color: white;
-      text-align: center;
-      font-size: 12px;
-      height: 50px;
-      line-height: 3;
-  }
-  
-  .row {
-    width: 100%;
-    overflow: auto; 
-    clear: both;
-    display: inline-block; 
-  }
+  background-color: #666666;
+  position: fixed;
+  width: 100%;
+  border-top: 8px solid #4aaaa5;
+  left: 0;
+  bottom: 0;
+  color: white;
+  text-align: center;
+  font-size: 12px;
+  height: 50px;
+}
 
-  .column-1 {
-    float: left;
-    width: 50%;
-    margin: auto;
-    padding: 0 10px 0 0;
+footer p {
+  margin-top: 12px;
+  margin-bottom: 12px;
+}
 
-  }
-  .column-2 {
-    float: right;
-    width: 50%;
-    padding: 0 0 0 10px;
 
-  }
-
-  .work {
-    width: 100%;
-    position: relative;
-    float: left;
-    margin: 20px auto 20px auto;
-    overflow: auto; 
-    
-  }
-  
-  
-  .work img {
-    width: 100%;
-    border: 0 none;
-    opacity: 0.8;
-  }
-  .work h3 {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 0;
-    font-weight: 300;
-    line-height: 30px;
-    color: #ffffff;
-    text-align: center;
-    background: #4aaaa5;
-  }    
-  .auth-image {
-    float: left;
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    margin-right: 25px;
-  }
-
- @media screen and (max-width: 980px) {
-   .header {
-     width: 980px;
+ #title {
+   
+   border-radius: 0px;
+   max-width: 960px; 
+   top: 125px;
+   font-family: Verdana, Arial;
+   color: white;
+   margin-top: 30px;
+   padding-left: 20px;
+   background-color: #99c;
+   height: 50px;
+ }
+ 
+ #title a {
+    display: inline;
+   font-family: Verdana, Arial;
+   color: white; }
+ 
+ .column-1 {
+   height: 50px;
+   padding: 5px;
+   float: left;
+ }
+ 
+ .column-2 {
+  height: 50px;
+   padding:10px;
+   float: left;
+ }
+ 
+ .column-3 {
+  height: 50px;
+   padding: 10px;
+   float: left;
+   
+ }
+ 
+ 
+   #game {
+     background-color: #DDDDEE;
+     background-size: auto;
+     margin-top: 20px;
+     max-width: 960px; 
+     top: 125px;
    }
-   .main-section {
-     width: 55%;
-     margin-left: 30px
+ 
+   footer {
+     background-color: #666666;
+     position: fixed;
+     width: 100%;
+     border-top: 8px solid #4aaaa5;
+     left: 0;
+     bottom: 0;
+     color: white;
+     text-align: center;
+     font-size: 12px;
+     height: 50px;
+ }
+ 
+   footer p {
+     margin-top: 12px;
+     margin-bottom: 12px;
+   }
+   
+   
+ 
+  /* @media screen and (max-width: 980px) {
+    .header {
+      width: 980px;
     }
+    .main-section {
+      width: 55%;
+      margin-left: 30px
+     }
+ 
+     @media screen and (max-width: 768px) {
+ 
+       .main-section {
+         width: 100%;
+         margin-left: 0px
+       }
+       #bio-image {
+         width: 50%;
+     }
+   }
+ 
+    @media screen and (max-width: 640px) {
+      
+     #main-container {
+       padding-top: 0px;
+     } 
+     
+     header {
+         position: static;
+         width: 640px;
+         width: 100%;   
+       }
+ 
+       #logo {
+         width: 100%;
+         margin-left: 0px;
+         clear: both; 
+       }
+ 
+       nav {
+         margin: auto;
+         width: 100%;
+         text-align: center;          
+       }  
+ 
+       .main-section {
+         width: 100%;
+         margin-left: 0px
+       }
+ 
+       #bio-image {
+         width: 100%;
+         margin-bottom: 10px;
+       }
+     .column-1 {
+         width: 100%;
+         padding: 0 0 0 0;
+ 
+       }
+       .column-2 {
+         width: 100%;
+         padding: 0 0 0 0;
+ 
+       }
+         
+       }
+ 
+ 
+ 
+     } */
+  
+@media screen and (max-width: 768px) {
+  .main-section {
+    width: 100%;
+    margin-left: 0px
+  } 
 
-    @media screen and (max-width: 768px) {
-
-      .main-section {
-        width: 100%;
-        margin-left: 0px
-      }
-      #bio-image {
-        width: 50%;
-    }
+  .column-3 {
+    width: 100%;
   }
 
-   @media screen and (max-width: 640px) {
-     
-    #main-container {
-      padding-top: 0px;
-    } 
+}
+
+@media screen and (max-width: 640px) { 
+  header {
+    position: static;
+    width: 640px; 
+    margin-bottom: 10px;
+  }
+  
+  #logo {
+    width: 100%;
+    margin-left: 0px;
+    clear: both; 
+  }
+
+  nav { 
+    margin-left: 0px;
+    clear: both; 
+    float: none;   
+    text-align: center;          
+  }  
+
+  .dropdown-content a {
+    padding: 5px 10px;
+  }
+
+  #main-container {
+    padding-top: 10px;
+  } 
     
-    header {
-        position: static;
-        width: 640px;
-        width: 100%;   
-      }
+  .main-section {
+    width: 100%;
+    margin-left: 0px
+  }
 
-      #logo {
-        width: 100%;
-        margin-left: 0px;
-        clear: both; 
-      }
-
-      nav {
-        margin: auto;
-        width: 100%;
-        text-align: center;          
-      }  
-
-      .main-section {
-        width: 100%;
-        margin-left: 0px
-      }
-
-      #bio-image {
-        width: 100%;
-        margin-bottom: 10px;
-      }
-    .column-1 {
-        width: 100%;
-        padding: 0 0 0 0;
-
-      }
-      .column-2 {
-        width: 100%;
-        padding: 0 0 0 0;
-
-      }
-        
-      }
+  
+  
+} 
 
 
-
-    }
