--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
   color: #777777;
-  background: #4aaaa5;
+  background-color: #043634;
   background-image: url("../../../Responsive-Portfolio/assets/images/another.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -50,8 +50,7 @@ header {
   width: 100%;
   margin: -10px -10px 40px;
   background-color: #043634;
-  border-color: #cccccc;
-  border-bottom:  2px  solid;
+  border-bottom:  2px  solid #cccccc;
   z-index: 99;
   opacity: 0.9;
 }
@@ -188,7 +187,6 @@ hr {
 
 #score {
   border: 1px solid #8383c1;
-  height: 60px;
   margin-bottom: 20px;
   border-radius: 0px;
   max-width: 960px; 
@@ -198,10 +196,10 @@ hr {
   padding-bottom: 20px;
   background-color: #99c;
   font-size: 15px;
+  overflow: auto;
 }
 
 #score .column-1 {
-  height: 20px;
   width: 33.3%;
   margin: auto;
   text-align: center;
@@ -209,7 +207,6 @@ hr {
 }
 
 #score .column-2 {
-  height: 20px;
   float: left;
   width: 33.3%;
   margin: auto;
@@ -222,7 +219,6 @@ hr {
 }
 
 #score .column-3 {
-  height: 20px;
   float: left;
   width: 33.3%;
   margin: auto;
@@ -234,13 +230,12 @@ hr {
   display: none; 
   position: fixed; 
   z-index: 1; 
-  padding-top: 100px; 
+  padding-top: 250px; 
   left: 0;
   top: 0;
   width: 100%; 
   height: 100%; 
   overflow: auto; 
-  background-color: rgb(102,102,153); 
   background-color: rgba(102,102,153,0.5); 
 }
 
@@ -250,7 +245,12 @@ hr {
   padding: 20px;
   border: 1px solid #888;
   width: 50%;
+  max-width: 310.4px;
   text-align: center;
+}
+
+.modal img {
+  width: 80%;
 }
 
 .modal-content h3 {
@@ -278,7 +278,7 @@ hr {
   border: 0 none;
   opacity: 0.8;
   width: 40px;
-  height: 40px;
+  height: 40.4px;
 }
   
 button {
@@ -290,58 +290,58 @@ button {
 }
 
 footer {
-  background-color: #666666;
   position: fixed;
   width: 100%;
-  border-top: 8px solid #4aaaa5;
   left: 0;
   bottom: 0;
   color: white;
   text-align: center;
   font-size: 12px;
-  height: 50px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  z-index: 99;
+  opacity: 0.9;
+  background-color: #043634;
+  border-color: #cccccc;
+  border-top:  2px  solid #cccccc;
 }
 
 footer p {
-  margin-top: 12px;
-  margin-bottom: 12px;
+  padding: 12px 0;
 }
 
 #title {
+  position: static;
   border-radius: 0px;
   max-width: 960px; 
   top: 125px;
   font-family: Verdana, Arial;
   color: white;
   margin-top: 30px;
-  padding-left: 20px;
+  padding-left: 15px;
   background-color: #99c;
-  height: 50px;
+  overflow: auto;
 }
  
 #title a {
   display: inline;
   font-family: Verdana, Arial;
   color: white; 
+  padding: 2px;
+  font-weight: 550;
 }
- 
+
+.row {
+  padding: 5px 0;
+}
+
 .column-1 {
-  height: 50px;
-  padding: 5px;
   float: left;
 }
  
 .column-2 {
-  height: 50px;
-  padding:10px;
-  float: left;
+  padding:11px;
+  margin-left: 50px;
 }
- 
-.column-3 {
-  height: 50px;
-  padding: 10px;
-  float: left; 
-} 
  
 #game {
   background-color: #DDDDEE;
@@ -357,16 +357,29 @@ footer p {
     margin-left: 0px
   } 
 
-  .column-3 {
-    width: 100%;
-  }
+  #title a {
+    padding: 0px;
+    font-weight: 500;
+  }  
 }
 
 @media screen and (max-width: 640px) { 
   header {
     position: static;
-    width: 640px; 
-    margin-bottom: 10px;
+    width: auto;
+    margin: -8px -8px 10px;
+  }
+
+  footer {
+    position: static;
+    width: auto;
+    margin: auto -8px -8px;
+    opacity: 1;
+    border-radius: 0px;
+  }
+
+  footer p {
+    padding-bottom: 8px;
   }
   
   #logo {
@@ -393,5 +406,9 @@ footer p {
   .main-section {
     width: 100%;
     margin-left: 0px
+  }
+
+  .column-1 {
+    padding: 11.2px 0;
   }
 }
